--- a/CrudDemoWithMySql/pom.xml
+++ b/CrudDemoWithMySql/pom.xml
@@ -73,13 +73,7 @@
 <distributionManagement>
     <repository>
         <id>central</id>
-        <name>a0pmskevvca33-artifactory-primary-0-releases</name>
-        <url>https://devops2022.jfrog.io/artifactory/default-maven-virtual</url>
+        <name>a0quhinnwxeqb-artifactory-primary-0-releases</name>
+        <url>https://ctlbootcamp.jfrog.io/artifactory/libs-release</url>
     </repository>
-    <snapshotRepository>
-        <id>snapshots</id>
-        <name>a0pmskevvca33-artifactory-primary-0-snapshots</name>
-        <url>https://devops2022.jfrog.io/artifactory/default-maven-virtual</url>
-    </snapshotRepository>
 </distributionManagement>
-</project>
