--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,13 @@
-name: Java CI/CD with AWS S3
+name: Java Web App CI/CD
 
 on:
   push:
     branches:
-      - main
+      - main  # You can specify your main branch here
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # You can choose a different runner if needed
 
     steps:
     - name: Checkout code
@@ -16,17 +16,22 @@ jobs:
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
-        java-version: '11'  # You can change this to your required Java version
+        java-version: 'adopt@1.17'  # Use the latest Java version, adjust as needed
 
     - name: Build with Maven
-      run: mvn clean package  # Replace with your Maven build command
+      run: mvn clean package  # Adjust your build command as needed
 
-    - name: Upload to AWS S3
-      uses: jakejarvis/s3-sync-action@v0.3.0
+    - name: Upload artifacts to AWS S3
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: 'us-east-1'  # Replace with your desired AWS region
-        source-dir: 'target/'  # Replace with the directory containing your artifacts
-        dest-bucket: 'your-s3-bucket-name'  # Replace with your AWS S3 bucket name
-        dest-dir: 'your-destination-directory'  # Replace with your desired S3 destination directory
+        aws-region: us-east-1  # Replace with your desired AWS region
+
+    - name: Copy artifacts to S3
+      run: |
+        aws s3 cp target/your-web-app.war s3://your-s3-bucket/your-path/
+      env:
+        AWS_DEFAULT_REGION: us-east-1  # Replace with your desired AWS region
+
+# Note: You need to set up AWS access credentials (AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY) as secrets in your GitHub repository.
