--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Java
       uses: actions/setup-java@v2
       with:
-        java-version: 'adopt@1.17'  # Use the latest Java version, adjust as needed
+        java-version: '15'
 
     - name: Build with Maven
       run: mvn clean package  # Adjust your build command as needed
