--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,10 @@ jobs:
 
 
     - name: Build with Maven
-      run: mvn clean package  # Adjust your build command as needed
+      run: | 
+        mvn clean package  # Adjust your build command as needed
+        ls
+        pwd
 
     - name: Upload artifacts to AWS S3
       uses: aws-actions/configure-aws-credentials@v1
