--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
 
     - name: Copy artifacts to S3
       run: |
+        pwd
+        ls
         aws s3 cp CrudDemoWithMySql-0.0.1-SNAPSHOT.war s3://ctl-crud-demo-build/
       env:
         AWS_DEFAULT_REGION: ap-south-1  # Replace with your desired AWS region
